anecdoct-rs/tui/src/bottom_pane/snapshots/anecdoct_tui__bottom_pane__chat_composer__tests__footer_mode_esc_hint_from_overlay.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Anecdoct to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  esc esc to edit previous message                                                                  "
